--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,51 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_graph"
-    app:startDestination="@id/servicesListFragment">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/main_graph"
+            app:startDestination="@id/servicesListFragment">
 
     <fragment
-        android:id="@+id/servicesListFragment"
-        android:name="com.cunningbird.thesis.client.customer.main.view.services.list.ServicesListFragment"
-        android:label="ServicesFragment"
-        tools:layout="@layout/fragment_services_list">
+            android:id="@+id/servicesListFragment"
+            android:name="com.cunningbird.thesis.client.customer.main.view.services.list.ServicesListFragment"
+            android:label="ServicesFragment"
+            tools:layout="@layout/fragment_services_list">
         <action
-            android:id="@+id/action_servicesListFragment_to_servicesDetailsFragment"
-            app:destination="@id/servicesDetailsFragment" />
+                android:id="@+id/action_servicesListFragment_to_servicesDetailsFragment"
+                app:destination="@id/servicesDetailsFragment"/>
     </fragment>
     <fragment
-        android:id="@+id/servicesDetailsFragment"
-        android:name="com.cunningbird.thesis.client.customer.main.view.services.details.ServicesDetailsFragment"
-        android:label="ServiceDetailsFragment"
-        tools:layout="@layout/fragment_services_details">
+            android:id="@+id/servicesDetailsFragment"
+            android:name="com.cunningbird.thesis.client.customer.main.view.services.details.ServicesDetailsFragment"
+            android:label="ServiceDetailsFragment"
+            tools:layout="@layout/fragment_services_details">
+        <argument android:name="id" app:argType="string"/>
+    </fragment>
+
+
+    <fragment
+            android:id="@+id/appointmentsListFragment"
+            android:name="com.cunningbird.thesis.client.customer.main.view.appointments.list.AppointmentsListFragment"
+            android:label="AppointmentsFragment"
+            tools:layout="@layout/fragment_appointments_list">
         <action
-            android:id="@+id/action_servicesDetailsFragment_to_servicesAppointFragment"
-            app:destination="@id/servicesAppointFragment" />
+                android:id="@+id/action_appointmentsListFragment_to_appointmentsDetailsFragment"
+                app:destination="@id/appointmentsDetailsFragment"/>
     </fragment>
     <fragment
-        android:id="@+id/servicesAppointFragment"
-        android:name="com.cunningbird.thesis.client.customer.main.view.services.appoint.ServicesAppointFragment"
-        android:label="AppointServiceFragment"
-        tools:layout="@layout/fragment_services_appoint" />
-
-
-
-    <fragment
-        android:id="@+id/appointmentsListFragment"
-        android:name="com.cunningbird.thesis.client.customer.main.view.appointments.list.AppointmentsListFragment"
-        android:label="AppointmentsFragment"
-        tools:layout="@layout/fragment_appointments_list">
-        <action
-            android:id="@+id/action_appointmentsListFragment_to_appointmentsDetailsFragment"
-            app:destination="@id/appointmentsDetailsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/appointmentsDetailsFragment"
-        android:name="com.cunningbird.thesis.client.customer.main.view.appointments.details.AppointmentsDetailsFragment"
-        android:label="AppointmentDetailsFragment"
-        tools:layout="@layout/fragment_appointments_details"/>
-
+            android:id="@+id/appointmentsDetailsFragment"
+            android:name="com.cunningbird.thesis.client.customer.main.view.appointments.details.AppointmentsDetailsFragment"
+            android:label="AppointmentDetailsFragment"
+            tools:layout="@layout/fragment_appointments_details"/>
 
 
     <fragment
@@ -55,7 +46,7 @@
             tools:layout="@layout/fragment_chats_list">
         <action
                 android:id="@+id/action_chatsListFragment_to_ChatsDialogFragment"
-                app:destination="@id/ChatsDialogFragment" />
+                app:destination="@id/ChatsDialogFragment"/>
     </fragment>
     <fragment
             android:id="@+id/ChatsDialogFragment"
@@ -64,11 +55,10 @@
             tools:layout="@layout/fragment_chats_dialog"/>
 
 
-
     <fragment
             android:id="@+id/accountFragment"
             android:name="com.cunningbird.thesis.client.customer.main.view.account.AccountFragment"
             android:label="AccountFragment"
-            tools:layout="@layout/fragment_account" />
+            tools:layout="@layout/fragment_account"/>
 
 </navigation>
