--- a/app/src/main/res/layout/fragment_appointments_details.xml
+++ b/app/src/main/res/layout/fragment_appointments_details.xml
@@ -51,16 +51,16 @@
         app:layout_constraintStart_toEndOf="@+id/img_geo"
         app:layout_constraintTop_toTopOf="@+id/img_geo" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/action_button"
-        style="@style/ActionButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"
-        tools:text="@string/go_to_dialog"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_geo" />
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/action_button"-->
+<!--        style="@style/ActionButton"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        tools:text="@string/go_to_dialog"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/img_geo" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
